[tool.poetry]
name = "market-feed-exporter"
packages = [
    { include = "market_feed_exporter", from = "src" },
]
version = "0.1.0"
description = ""
authors = ["Viacheslav Bessonov <viacheslav.bessonov@hilbertteam.com>"]

[tool.poetry.dependencies]
python = "3.6"
click = "^7.1.2"
webpub_manifest_parser = { file = "lib/webpub_manifest_parser-0.0.4-py2.py3-none-any.whl" }

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
greet = "market_feed_exporter.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
